--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h3>Enter Number of Tag</h3>
+    <div>
+        <form action="">
+            <input type="number" placeholder="Enter numbers (1-5)" max="5">
+            <button class="setup">Setup</button>
+        </form> 
+    </div>
     <div id="gameArea">
         <div id="target"></div>
     </div>
